# proxhy

./: .gitignore  LICENSE  README.md  aliases.py  bridge.py  commands.py  errors.py  formatting.py  main.py  models.py  old_commands.py  patches.py  protocols.py  proxhy.spec  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yml
proxhy/: __main__.py  aliases.py  client.py  command.py  datatypes.py  encryption.py  errors.py  formatting.py  models.py  proxy.py
proxhy/auth/: __init__.py
proxhy/auth/msmcauthaio/: __init__.py  client.py  constants.py  errors.py  http.py  models.py
proxhy/auth/msmcauthaio/helpers/: __init__.py  microsoft.py  xbox.py
